--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=b3a7451c1da4c6a14f85c59e5bc76b7f
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root@127.0.0.1:3306/popsleigh
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
