--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "vich/uploader-bundle": "^1.9"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
